--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,3 +1,61 @@
-*{
+/* Colors */
+/* Color Theme Swatches in Hex */
+.Flambette---Website-1-hex { color: #0460D9; }
+.Flambette---Website-2-hex { color: #117CD9; }
+.Flambette---Website-3-hex { color: #274001; }
+.Flambette---Website-4-hex { color: #A2A685; }
+.Flambette---Website-5-hex { color: #F2F2F2; }
+
+/* Color Theme Swatches in RGBA */
+.Flambette---Website-1-rgba { color: rgba(4, 96, 217, 1); }
+.Flambette---Website-2-rgba { color: rgba(17, 124, 217, 1); }
+.Flambette---Website-3-rgba { color: rgba(39, 64, 1, 1); }
+.Flambette---Website-4-rgba { color: rgba(162, 166, 133, 1); }
+.Flambette---Website-5-rgba { color: rgba(242, 242, 242, 1); }
+
+/* Color Theme Swatches in HSLA */
+.Flambette---Website-1-hsla { color: hsla(214, 96, 43, 1); }
+.Flambette---Website-2-hsla { color: hsla(207, 85, 45, 1); }
+.Flambette---Website-3-hsla { color: hsla(83, 96, 12, 1); }
+.Flambette---Website-4-hsla { color: hsla(67, 15, 58, 1); }
+.Flambette---Website-5-hsla { color: hsla(0, 0, 94, 1); }
+
+
+* {
+    box-sizing: border-box;
+    margin: 1px;
     text-decoration: none;
 }
+
+body {
+    background-color: #F2F2F2;
+    height: 99vh;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px black solid;
+}
+
+.navhead {
+    font-size: 40px;
+}
+
+.navlinks {
+    font-size: 30px;
+    color: black;
+    padding: 10px; 
+}
+
+.navlinks:first-child {
+    border-right: 2px black solid;
+}
+
+.navlinks:last-child {
+    border-left: 2px black solid;
+}
+
+
+
